# data_pipe

./: .gitignore  .travis.yml  README.md  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
src/main/data_pipe/: .gitignore  any_buffer.py  any_index.py  basic_buffer.py  basic_index.py  basic_ruptor.py  basic_trunk.py  native_any.h  native_any.pxd  native_buffer.py  native_buffer.pyx  native_index.pyx  native_ruptor.pyx  runtime_library.pyx
src/perf/: readme.md
src/perf/data_pipe_perf/: any_buffer_perf.py  any_ruptor_perf.py  basic_buffer_perf.py  native_buffer_perf.py  py_asio_queue_perf.py  py_curio_queue_perf.py  py_os_pipe_perf.py  py_sync_queue_perf.py  py_trio_queue_perf.py
src/test/data_pipe_test/: any_buffer_test.py  basic_buffer_test.py  basic_index_test.py  basic_trunk_test.py  native_buffer_test.py  native_futex_test.py  native_index_test.py  native_ruptor_test.py  verify_buffer.py  verify_index.py
src/verify/design/: buffer.py  buffer_test.py  channel.py  message.py  native.py  native_a.h  native_a1.h  native_base_test.py  native_code.c  native_code1.c  native_core_test.py  native_module.pyx  native_system.pxd  packer.py  sequence.py  sequence_1.py  sequence_2.py  sequence_test.py  simple.py  simple2.py  simple2_test.py  simple3.py  simple3_test.py  simple_index_perf2.py  simple_index_perf3.py  storage_2.py  verify_priority.py
src/verify/perform/nice/: nice_1.py  nice_2.py  nice_3.py
tool/: github_squash.py  install_local.py  native_build.launch  native_build.py  perform_tox.py  release_update.py  tox_verify.py
(+1 files in other folders)
