[metadata]

name = data_pipe
version = 0.2.2

requires-python = >=3.8

author = Andrei Pozolotin
author-email = andrei.pozolotin@gmail.com

summary = Cross Thread Message Pipe

description-file = readme.md
description-content-type = text/markdown; charset=UTF-8

home-page = https://github.com/random-python/data_pipe

license = Apache-2

classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Utilities
    

keywords =
    cross
    thread
    process
    message
    pipe
    memory
    channel
    trio
    curio
    asyncio
    threading
    multiprocessing

[files]
# none

[options]    

packages =
    data_pipe
    data_pipe_test
    
package_dir = 
    data_pipe      = src/main/data_pipe
    data_pipe_test = src/test/data_pipe_test

[entry_points]
# none

console_scripts =
# none
    
[pbr]

warnerrors = True
skip_authors = True
skip_git_sdist = False
skip_changelog = True
